# lemrvm

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: CI.yml
core/: Cargo.toml
core/src/: bus.rs  hart.rs  instruction.rs  lib.rs  privilege.rs
core/src/utils/: bits.rs
core/tests/: riscv.rs
