[package]
name = "lemrvm-core"
description = "The core library for the LemRVM host."
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

[dev-dependencies]
datatest-stable = "0.3.3"
goblin = "0.10.7"

[[test]]
name = "riscv"
harness = false